tests/baselines/reference/genericPrototypeProperty.errors.txt
genericPrototypeProperty.ts(3,20): error TS2322: Type 'null' is not assignable to type 'T'.
  'T' could be instantiated with an arbitrary type which could be unrelated to 'null'.


==== genericPrototypeProperty.ts (1 errors) ====
    class C<T> {
        x: T;
        foo(x: T): T { return null; }
                       ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'T'.
!!! error TS2322:   'T' could be instantiated with an arbitrary type which could be unrelated to 'null'.
    }
    
    var r = C.prototype;
    // should be any
    var r2 = r.x
    var r3 = r.foo(null);